--- a/simple-app/src/main/resources/application.properties
+++ b/simple-app/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-server.port=8080
+server.port=8081
 server.servlet.context-path=/
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
